--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form action="">
         <div class="inputs-group">
         <label for="">Indiquez si vous êtes un homme ou une femme</label> <br>
-        <input type="radio" name="sex" id="SexF" required>Femme <br>
+        <input type="radio" name="sex" id="SexF" required>Femme <br> <br> 
         <input type="radio" name="sex" id="SexH" required>Homme <br>
         </div>
 
